Added r, expanded c and supert
Added alternate reference topic, content to c, and content to super t

--- a/generic-containers.ditamap
+++ b/generic-containers.ditamap
@@ -8,4 +8,5 @@
     </topicref>
     <topicref href="c_html_css.dita"/>
     <topicref href="r_html.dita"/>
+    <topicref href="r_compare.dita"/>
 </map>
