Fixed new r titling, in-line
Fixed linking to r_compare (changed id, ampersand), decided to write
“inline” as “in-line”

--- a/r_compare.dita
+++ b/r_compare.dita
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
-<reference id="ref_remote_control_components" xml:lang="en-us">
-  <title>Generic Container Comparison & Examples</title>
-  <shortdesc>HTML has two types of generic containers: inline (SPAN) and block-level (DIV). Examples of their different uses may help you choose the proper generic container.</shortdesc>
+<reference id="compare" xml:lang="en-us">
+  <title>Generic Container Comparison &amp; Examples</title>
+  <shortdesc>HTML has two types of generic containers: in-line (SPAN) and block-level (DIV). Examples of their different uses may help you choose the proper generic container.</shortdesc>
   <refbody>
   	<table>
 		<tgroup cols="3">
@@ -16,12 +16,12 @@
 			<tbody>
 				<row>
 					<entry>SPAN</entry>
-					<entry>Inline generic container<br>SPAN should be used to contain small sections of content that do not stand alone.</entry>
+					<entry>In-line generic container. SPAN should be used to contain small sections of content that do not stand alone.</entry>
 					<entry>A single letter in a word, a single word in a sentence, or a single sentence in a paragraph.</entry>
 				</row>
 				<row>
 					<entry>DIV</entry>
-					<entry>Block-level generic container<br>DIV should be used to contain larger blocks or complete sections of content.</entry>
+					<entry>Block-level generic container. DIV should be used to contain larger blocks or complete sections of content.</entry>
 					<entry>An entire paragraph, a section of a document.</entry>
 				</row>
 			</tbody>
