--- a/t_div.dita
+++ b/t_div.dita
@@ -19,7 +19,7 @@
       </ul>
     </prereq>
     <context>
-      It is important that you use the correct generic inline container
+      It is important that you use the correct generic container
     </context>
     <steps>
       <step>
