Standardized div format, added text content
Changed DIV to &lt;div&gt;. Added prereq, context, steps. Added stepxmp.

--- a/t_div.dita
+++ b/t_div.dita
@@ -11,22 +11,53 @@
   </prolog>
    
   <taskbody>
-    <prereq>In order to use DIV, you will need the following:
+    <prereq>In order to use &lt;span&gt;, you will need the following:
       <ul>
         <li>Text editor</li>
         <li>HTML document</li>
         <li>Selection from document that you would like to "contain"</li>
       </ul>
+      <p>You should also:</p>
+      <ul>
+		  <li>Confirm that you have selected the appropriate generic container</li>
+		  <li>Confirm that there is not a semantic element that would better fit your purpose</li>
+		  <li>Determine how you want to identify your selection (“class" or “id" HTML attribute)</li>
+      </ul>
     </prereq>
     <context>
-      It is important that you use the correct generic container
+      The “class” HTML attribute is used when you would like to apply the same grouping to multiple separate sections of the page. The “id” HTML attribute is for selecting unique content and should only be used once per page. Attributes can be added to the opening tag of an HTML element.
     </context>
     <steps>
       <step>
-        <cmd>Prepare the machine</cmd>
+        <cmd>Insert the opening &lt;div&gt; tag (&lt;div&gt;) on a line before the first character of the area you want to select.</cmd>
+        <stepxmp>
+        &lt;div&gt;
+			Once upon a time… Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ullamcorper facilisis risus, et malesuada magna mollis nec. Quisque varius sem odio, in fermentum eros varius non. Pellentesque eu lectus tempus odio porta suscipit. Vestibulum consectetur accumsan condimentum.
+        </stepxmp>
       </step>
       <step>
-        <cmd>Clean and clean more</cmd>
+        <cmd>Insert the closing &lt;div&gt; tag (&lt;/div&gt;) on a line after the last character of the area you want to select.</cmd>
+        <stepxmp>
+        &lt;div&gt;
+			Once upon a time… Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ullamcorper facilisis risus, et malesuada magna mollis nec. Quisque varius sem odio, in fermentum eros varius non. Pellentesque eu lectus tempus odio porta suscipit. Vestibulum consectetur accumsan condimentum.
+		&lt;/div&gt;
+        </stepxmp>
+      </step>
+      <step>
+        <cmd>Add a class or id attribute to the opening tag.</cmd>
+        <stepxmp>
+        &lt;div id=“"&gt;
+Once upon a time… Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ullamcorper facilisis risus, et malesuada magna mollis nec. Quisque varius sem odio, in fermentum eros varius non. Pellentesque eu lectus tempus odio porta suscipit. Vestibulum consectetur accumsan condimentum.
+		&lt;/div&gt;
+        </stepxmp>
+      </step>
+      <step>
+        <cmd>Choose and insert a selector title for your attribute.</cmd>
+        <stepxmp>
+        &lt;div id=“first-paragraph"&gt;
+			Once upon a time… Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ullamcorper facilisis risus, et malesuada magna mollis nec. Quisque varius sem odio, in fermentum eros varius non. Pellentesque eu lectus tempus odio porta suscipit. Vestibulum consectetur accumsan condimentum.
+		&lt;/div&gt;
+        </stepxmp>
       </step>
     </steps>
   </taskbody>
