--- a/t_span.dita
+++ b/t_span.dita
@@ -21,11 +21,11 @@
       <ul>
 		  <li>Confirm that you have selected the appropriate generic container</li>
 		  <li>Confirm that there is not a semantic element that would better fit your purpose</li>
-		  <li>Determine how you want to identify your selection (“class" or “id" HTML attribute)</li>
+		  <li>Determine how you want to identify your selection ("class" or "id" HTML attribute)</li>
       </ul>
     </prereq>
     <context>
-      The “class” HTML attribute is used when you would like to apply the same grouping to multiple separate sections of the page. The “id” HTML attribute is for selecting unique content and should only be used once per page. Attributes can be added to the opening tag of an HTML element.
+      The "class" HTML attribute is used when you would like to apply the same grouping to multiple separate sections of the page. The "id" HTML attribute is for selecting unique content and should only be used once per page. Attributes can be added to the opening tag of an HTML element.
     </context>
     <steps>
       <step>
