--- a/generic-containers.ditamap
+++ b/generic-containers.ditamap
@@ -7,6 +7,7 @@
     	<topicref href="t_div.dita"/>
     </topicref>
     <topicref href="c_html_css.dita"/>
+    <topicref href="c_semantics.dita"/>
     <topicref href="r_html.dita"/>
     <topicref href="r_compare.dita"/>
 </map>
