Changed r_html to r_glossary
Filled in glossary content, changed ditamap

--- a/generic-containers.ditamap
+++ b/generic-containers.ditamap
@@ -8,6 +8,6 @@
     </topicref>
     <topicref href="c_html_css.dita"/>
     <topicref href="c_semantics.dita"/>
-    <topicref href="r_html.dita"/>
+    <topicref href="r_glossary.dita"/>
     <topicref href="r_compare.dita"/>
 </map>
