--- a/t_div.dita
+++ b/t_div.dita
@@ -11,19 +11,7 @@
   </prolog>
    
   <taskbody>
-    <prereq>In order to use &lt;div&gt;, you will need the following:
-      <ul>
-        <li>Text editor</li>
-        <li>HTML document</li>
-        <li>Selection from document that you would like to "contain"</li>
-      </ul>
-      <p>You should also:</p>
-      <ul>
-		  <li>Confirm that you have selected the appropriate generic container</li>
-		  <li>Confirm that there is not a semantic element that would better fit your purpose</li>
-		  <li>Determine how you want to identify your selection ("class" or "id" HTML attribute)</li>
-      </ul>
-    </prereq>
+    <prereq conref="t_span.dita#span/prereq"></prereq>
     <context>
       The "class" HTML attribute is used when you would like to apply the same grouping to multiple separate sections of the page. The "id" HTML attribute is for selecting unique content and should only be used once per page. Attributes can be added to the opening tag of an HTML element.
     </context>
