--- a/t_div.dita
+++ b/t_div.dita
@@ -11,7 +11,7 @@
   </prolog>
    
   <taskbody>
-    <prereq conref="t_span.dita#span/prereq"></prereq>
+    <prereq conref="t_span.dita#span/prereq">Replace Me</prereq>
     <context>
       The "class" HTML attribute is used when you would like to apply the same grouping to multiple separate sections of the page. The "id" HTML attribute is for selecting unique content and should only be used once per page. Attributes can be added to the opening tag of an HTML element.
     </context>
